--- a/html/index.html
+++ b/html/index.html
@@ -6,5 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <ul class="task-list">
+      <li class="list-item">
+        <a href="./task1.html" class="task1">Завдання 1</a>
+      </li>
+      <li class="list-item">
+        <a href="./task2.html" class="task2">Завдання 2</a>
+      </li>
+      <li class="list-item">
+        <a href="./task3.html" class="task3">Завдання 3</a>
+      </li>
+      <li class="list-item">
+        <a href="./task4.html" class="task4">Завдання 4</a>
+      </li>
+      <li class="list-item">
+        <a href="./task5.html" class="task5">Завдання 5</a>
+      </li>
+      <li class="list-item">
+        <a href="./task6.html" class="task6">Завдання 6</a>
+      </li>
+      <li class="list-item">
+        <a href="./task7.html" class="task7">Завдання 7</a>
+      </li>
+      <li class="list-item">
+        <a href="./task8.html" class="task8">Завдання 8</a>
+      </li>
+      <li class="list-item">
+        <a href="./task9.html" class="task9">Завдання 9</a>
+      </li>
+      <li class="list-item">
+        <a href="./task10.html" class="task10">Завдання 10</a>
+      </li>
+    </ul>
+
+    <script src="task1.js" type="module"></script>
+    <script src="task2.js" type="module"></script>
+    <script src="task3.js" type="module"></script>
+    <script src="task4.js" type="module"></script>
+    <script src="task5.js" type="module"></script>
+    <script src="task6.js" type="module"></script>
+    <script src="task7.js" type="module"></script>
+    <script src="task8.js" type="module"></script>
+    <script src="task9.js" type="module"></script>
+    <script src="task10.js" type="module"></script>
+  </body>
 </html>
