--- a/html/task4.html
+++ b/html/task4.html
@@ -12,5 +12,6 @@
       <span id="value">0</span>
       <button type="button" data-action="increment">+1</button>
     </div>
+    <script src="../js/task4.js" type="module"></script>
   </body>
 </html>
