--- a/html/task5.html
+++ b/html/task5.html
@@ -9,5 +9,6 @@
   <body>
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+    <script src="../js/task5.js" type="module"></script>
   </body>
 </html>
