--- a/html/task6.html
+++ b/html/task6.html
@@ -13,5 +13,6 @@
       data-length="6"
       placeholder="Please enter 6 symbols"
     />
+    <script src="../js/task6.js" type="module"></script>
   </body>
 </html>
