--- a/html/task7.html
+++ b/html/task7.html
@@ -10,5 +10,6 @@
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
+    <script src="../js/task7.js" type="module"></script>
   </body>
 </html>
