--- a/html/task8.html
+++ b/html/task8.html
@@ -18,5 +18,6 @@
       </label>
       <button type="submit">Login</button>
     </form>
+    <script src="../js/task8.js" type="module"></script>
   </body>
 </html>
