--- a/html/task9.html
+++ b/html/task9.html
@@ -11,5 +11,6 @@
       <p>Background color: <span class="color">-</span></p>
       <button type="button" class="change-color">Change color</button>
     </div>
+    <script src="../js/task9.js" type="module"></script>
   </body>
 </html>
